components/ExpandableContainer/styles.module.css
.ClickableContainer {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: var(--spacing-sm) var(--spacing-md);
  cursor: pointer;
  border-radius: var(--spacing-xs);
  border: var(--spacing-border) solid var(--neutral-surface);
  border-top: none;
  border-right: none;
  border-left: none;
  box-shadow: 0 var(--spacing-xs) 6px rgba(0, 0, 0, 0.15);
  font: 16px;
  font-weight: 600px;
  color: var(--font-color);
  transition:
    box-shadow 0.2s ease,
    transform 0.1s ease;
}

.ContentContainer {
  display: flex;
  position: relative;
  border-top: 0px;
  gap: var(--spacing-sm);
  padding: var(--spacing-sm) 0px;
  border-left: var(--spacing-border) solid var(--neutral-surface);
  border-right: var(--spacing-border) solid var(--neutral-surface);
  border-bottom: var(--spacing-border) solid var(--neutral-surface);
  border-bottom-left-radius: var(--spacing-border);
  border-bottom-right-radius: var(--spacing-border);
}

.ExpandableContainerButton {
  background-color: var(--neutral);
}

.ExpandableContainerIcon {
  background-color: var(--neutral);
  color: white;
}

.ExpandableContainerLabelWrapper {
  display: flex;
  justify-content: space-between;
  padding: 0px 8px;
}

.ExpanableContainerCounterWrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 8px;
}

